JDK-21+ response-time gc profile uses generational zgc (#1520)
JDK-21+ response-time gc profile uses generational zgc